--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
      <script src="/js/libs.js" type="text/javascript"></script>
      <!-- Include your CLJS output -->
      <script src="/js/compiled/main.js" type="text/javascript"></script>
-      <script>connectwallet.core.Application()</script>
+      <script>connectwallet.core.app()</script>
   </body>
 </html>
